tests/errors/arguments/variables/invalid_char_07.src
.IPPcode18
defvar GF@/var